--- a/application/views/scripts/users/edit.phtml
+++ b/application/views/scripts/users/edit.phtml
@@ -17,46 +17,47 @@
     <?php endif ?>
 
     <dl class='dl-horizontal well'>
-    	<dt>Photo</dt>
-        <dd>
-        	<p>
-        		<?php $this->avatar($this->user["ID_UTILISATEUR"]) ?>
-        		<input name='avatar' type='file' />
-    		</p>
-    	</dd>
+        <div class="form-group">
+            <dt>Photo</dt>
+            <dd>
+                <?php $this->avatar($this->user["ID_UTILISATEUR"]) ?>
+                <input name='avatar' type='file' />
+            </dd>
+        </div>
 
-        <dt>Login</dt>
-        <dd>
-            <p>
+        <div class="form-group">
+            <dt>Login</dt>
+            <dd>
                 <input class="form-control" placeholder='Login de connexion ...' name='USERNAME_UTILISATEUR' value='<?php if(isset($this->user["USERNAME_UTILISATEUR"])) echo $this->user["USERNAME_UTILISATEUR"] ?>' type='text' />
-            </p>
-    	</dd>
+            </dd>
+        </div>
 
-        <dt>Mot de passe</dt>
-        <dd>
-            <?php if( $this->add ) : ?>
-                <input class="form-control" placeholder='Mot de passe' name='PASSWD_INPUT' type='password' />
-                <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' /><?php endif ?>
-            <?php else : ?>
-                <!-- @fixme: Voir pour le comportement quand on clique sur le bouton -->
-                <div class="input-group">
-                    <input class="form-control" placeholder='Mot de passe' name='PASSWD_INPUT' type='password' disabled value='<?php echo $this->user["PASSWD_UTILISATEUR"] ?>' />
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-default" id='change_passwd' >Changer le mot de passe</button>
-                    </span>
-                </div>
-                <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' <?php if($this->user["PASSWD_UTILISATEUR"] == null) echo "checked"?> /><?php endif ?>
-            <?php endif ?>
+        <div class="form-group">
+            <dt>Mot de passe</dt>
+            <dd>
+                <?php if( $this->add ) : ?>
+                    <input class="form-control" placeholder='Mot de passe' name='PASSWD_INPUT' type='password' />
+                    <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' /><?php endif ?>
+                <?php else : ?>
+                    <!-- @fixme: Voir pour le comportement quand on clique sur le bouton -->
+                    <div class="input-group">
+                        <input class="form-control" placeholder='Mot de passe' name='PASSWD_INPUT' type='password' disabled value='<?php echo $this->user["PASSWD_UTILISATEUR"] ?>' />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" id='change_passwd' >Changer le mot de passe</button>
+                        </span>
+                    </div>
+                    <?php if($this->params["LDAP_ACTIF"]) : ?> Connexion via LDAP/CAS/NTLM ? <input type='checkbox' class='ldap' value='1' <?php if($this->user["PASSWD_UTILISATEUR"] == null) echo "checked"?> /><?php endif ?>
+                <?php endif ?>
+                <?php if (getenv('PREVARISC_ENFORCE_SECURITY') == 1): ?>
+                    <p id="password_instructions" style="<?php echo $this->add ? '' : 'display:none' ?>">
+                        Le mot de passe doit contenir au moins 8 caractères
+                        dont 1 minuscule, 1 majuscule, 1 chiffre et 1 caractère spécial.
+                    </p>
+                <?php endif ?>
+            </dd>
+        </div>
 
-            <?php if (getenv('PREVARISC_ENFORCE_SECURITY') == 1): ?>
-                <p id="password_instructions" style="<?php echo $this->add ? '' : 'display:none' ?>">
-                    Le mot de passe doit contenir au moins 8 caractères
-                    dont 1 minuscule, 1 majuscule, 1 chiffre et 1 caractère spécial.
-                </p>
-            <?php endif ?>
-        </dd>
-
-        <div class="mt-4">
+        <div class="form-group">
             <dt>Groupe</dt>
             <dd>
                 <p>
@@ -69,25 +70,24 @@
             </dd>
         </div>
 
-        <dt>Utilisateur actif ?</dt>
-        <dd>
-            <p>
+        <div class="form-group">
+            <dt>Utilisateur actif ?</dt>
+            <dd>
                 <input type='hidden' value='0' name='ACTIF_UTILISATEUR' />
                 <input type='checkbox' name='ACTIF_UTILISATEUR' value='1' <?php if( !isset($this->user) || $this->user['ACTIF_UTILISATEUR'] ) echo "checked" ?> />
-            </p>
-        </dd>
+            </dd>
+        </div>
 
-        <dt>Dernière IP authentifiée</dt>
-        <dd>
-            <p>
+        <div class="form-group">
+            <dt>Dernière IP authentifiée</dt>
+            <dd>
                 <input type='text' class="form-control" name='IP_UTILISATEUR' maxlength="45" value='<?php echo $this->user["IP_UTILISATEUR"] ?>' />
-            </p>
-        </dd>
+            </dd>
+        </div>
 
         <dt>Connexions en échec</dt>
         <dd>
             <input type='number' min="0" class="form-control" name='FAILED_LOGIN_ATTEMPTS_UTILISATEUR' value='<?php echo $this->user["FAILED_LOGIN_ATTEMPTS_UTILISATEUR"] ? : '0' ?>' />
-            
             <?php if(getenv('PREVARISC_ENFORCE_SECURITY') == 1 && $this->user["FAILED_LOGIN_ATTEMPTS_UTILISATEUR"] >= 2): ?>
                 <a href='#' id='unlock' >Débloquer</a> les connexions autres qu'avec l'IP ci-dessus.
             <?php endif ?>
@@ -96,28 +96,28 @@
 
     <h4>Informations de l'utilisateur</h4>
     <dl class='dl-horizontal'>
-    	<dt>Prénom</dt>
-		<dd class="row">
-            <div class="col-md-12">
-                <p>
+    	<div class="form-group">
+            <dt>Prénom</dt>
+            <dd class="row">
+                <div class="col-md-12">
                     <input class="form-control" type='text' name='PRENOM_UTILISATEURINFORMATIONS' value='<?php echo htmlspecialchars($this->user['infos']["PRENOM_UTILISATEURINFORMATIONS"], ENT_QUOTES) ?>' />
-                </p>
-            </div>
-		</dd>
+                </div>
+            </dd>
+        </div>
 
-		<dt>Nom</dt>
-		<dd class="row">
-            <div class="col-md-12">
-                <p>
+		<div class="form-group">
+            <dt>Nom</dt>
+            <dd class="row">
+                <div class="col-md-12">
                     <input class="form-control" type='text' name='NOM_UTILISATEURINFORMATIONS' value='<?php echo htmlspecialchars($this->user['infos']["NOM_UTILISATEURINFORMATIONS"], ENT_QUOTES) ?>' />
-                </p>
-            </div>
-		</dd>
+                </div>
+            </dd>
+        </div>
 
-    	<dt>Fonction</dt>
-		<dd class="row">
-            <div class="col-md-12">
-                <p>
+    	<div class="form-group">
+            <dt>Fonction</dt>
+            <dd class="row">
+                <div class="col-md-12">
                     <select class="form-control" name='ID_FONCTION'>
                         <?php foreach($this->fonctions as $fonction) : ?>
                             <option value='<?php echo $fonction["ID_FONCTION"] ?>' <?php if(($fonction["ID_FONCTION"] == $this->user['infos']["ID_FONCTION"])) echo "selected" ?> >
@@ -125,49 +125,51 @@
                             </option>
                         <?php endforeach ?>
                     </select>
-                </p>
-            </div>
-		</dd>
+                </div>
+            </dd>
+        </div>
 
-		<dt class='grade_user'>Grade</dt>
-		<dd class='grade_user row'>
-            <div class="col-md-12">
-                <p>
-			        <input class="form-control" type='text' name='GRADE_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["GRADE_UTILISATEURINFORMATIONS"] ?>' />
-                </p>
-            </div>
-		</dd>
+		<div class="form-group">
+            <dt class='grade_user'>Grade</dt>
+            <dd class='grade_user row'>
+                <div class="col-md-12">
+                    <input class="form-control" type='text' name='GRADE_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["GRADE_UTILISATEURINFORMATIONS"] ?>' />
+                </div>
+            </dd>
+        </div>
 
-		<dt>Téléphones</dt>
-		<dd class="row">
-            <div class="col-md-6">
-			    <input class="form-control" type='text' name='TELFIXE_UTILISATEURINFORMATIONS' placeholder='Téléphone fixe ...' value='<?php echo $this->user['infos']["TELFIXE_UTILISATEURINFORMATIONS"] ?>' /><br/>
-            </div>
-            <div class="col-md-6">
-			    <input class="form-control" type='text' name='TELPORTABLE_UTILISATEURINFORMATIONS' placeholder='Portable ...' value='<?php echo $this->user['infos']["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>' />
-            </div>
-            <div class="col-md-12">
-			    <input class="form-control" type='text' name='TELFAX_UTILISATEURINFORMATIONS' placeholder='Fax ...' value='<?php echo $this->user['infos']["TELFAX_UTILISATEURINFORMATIONS"] ?>' /><br/>
-            </div>
-		</dd>
-
-		<dt>Courriel</dt>
-		<dd class="row">
-            <div class="col-md-12">
-                <p>
-                    <input class="form-control" type='text' name='MAIL_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["MAIL_UTILISATEURINFORMATIONS"] ?>' />
-                </p>
-            </div>
-		</dd>
-
-		<dt>Site Web</dt>
+		<div class="form-group">
+            <dt>Téléphones</dt>
             <dd class="row">
-            <div class="col-md-12">
-                <p>
+                <div class="form-group col-md-6">
+                    <input class="form-control" type='text' name='TELFIXE_UTILISATEURINFORMATIONS' placeholder='Téléphone fixe ...' value='<?php echo $this->user['infos']["TELFIXE_UTILISATEURINFORMATIONS"] ?>' />
+                </div>
+                <div class="form-group col-md-6">
+                    <input class="form-control" type='text' name='TELPORTABLE_UTILISATEURINFORMATIONS' placeholder='Portable ...' value='<?php echo $this->user['infos']["TELPORTABLE_UTILISATEURINFORMATIONS"] ?>' />
+                </div>
+                <div class="col-md-12">
+                    <input class="form-control" type='text' name='TELFAX_UTILISATEURINFORMATIONS' placeholder='Fax ...' value='<?php echo $this->user['infos']["TELFAX_UTILISATEURINFORMATIONS"] ?>' />
+                </div>
+            </dd>
+        </div>
+
+		<div class="form-group">
+            <dt>Courriel</dt>
+            <dd class="row">
+                <div class="col-md-12">
+                    <input class="form-control" type='text' name='MAIL_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["MAIL_UTILISATEURINFORMATIONS"] ?>' />
+                </div>
+            </dd>
+        </div>
+
+		<div class="form-group">
+            <dt>Site Web</dt>
+            <dd class="row">
+                <div class="col-md-12">
                     <input class="form-control" type='text' name='WEB_UTILISATEURINFORMATIONS' value='<?php echo $this->user['infos']["WEB_UTILISATEURINFORMATIONS"] ?>' />
-                </p>
-            </div>
-		</dd>
+                </div>
+            </dd>
+        </div>
 
 		<dt>Adresse</dt>
 		<dd class="row">
@@ -179,23 +181,23 @@
 
     <h4>Domaines de compétences</h4>
     <dl class='dl-horizontal'>
-        <dt>Commune</dt>
-        <dd>
-        	<p>
-	            <select class="form-control" name='NUMINSEE_COMMUNE'>
-	                <option value="null">Définir une commune ...</option>
-	                <?php foreach($this->communes as $commune) : ?>
-	                <option value="<?php echo $commune['NUMINSEE_COMMUNE'] ?>" <?php if( $commune['NUMINSEE_COMMUNE'] == $this->user['NUMINSEE_COMMUNE'] ) echo "selected" ?>><?php echo $commune['LIBELLE_COMMUNE'] ?></option>
-	                <?php endforeach ?>
-	            </select>
-            </p>
-        </dd>
+        <div class="form-group">
+            <dt>Commune</dt>
+            <dd>
+                <select class="form-control" name='NUMINSEE_COMMUNE'>
+                    <option value="null">Définir une commune ...</option>
+                    <?php foreach($this->communes as $commune) : ?>
+                    <option value="<?php echo $commune['NUMINSEE_COMMUNE'] ?>" <?php if( $commune['NUMINSEE_COMMUNE'] == $this->user['NUMINSEE_COMMUNE'] ) echo "selected" ?>><?php echo $commune['LIBELLE_COMMUNE'] ?></option>
+                    <?php endforeach ?>
+                </select>
+            </dd>
+        </div>
 
-        <dt>Commissions</dt>
-        <dd>
-        	<p>
-	            <select name='commissions[]' class="chosen input-lg" data-placeholder="Commissions" multiple="multiple">
-	                <?php $previous_type = null ?>
+        <div class="form-group">
+            <dt>Commissions</dt>
+            <dd>
+                <select name='commissions[]' class="chosen input-lg" data-placeholder="Commissions" multiple="multiple">
+                    <?php $previous_type = null ?>
                     <?php foreach($this->commissions as $commission) : ?>
                         <?php if (!$previous_type): ?>
                             <optgroup label="<?php echo $commission['LIBELLE_COMMISSIONTYPE'] ?>">
@@ -207,47 +209,44 @@
                             <?php echo $commission['LIBELLE_COMMISSION'] . " (".$commission['LIBELLE_COMMISSIONTYPE'].")" ?>
                         </option>
                         <?php $previous_type = $commission['ID_COMMISSIONTYPE'] ?>
-	                <?php endforeach ?>
-
+                    <?php endforeach ?>
                     <?php if ($previous_type): ?>
                         </optgroup>
                     <?php endif ?>
-	            </select>
-            </p>
-        </dd>
+                </select>
+            </dd>
+        </div>
 
         <dt>Groupements</dt>
         <dd>
-        	<p>
-	            <select name='groupements[]' class="chosen input-xxlarge" data-placeholder="Groupements" multiple="multiple">
-                    <?php $previous_type = null ?>
-	                <?php foreach($this->groupements as $groupement) : ?>
-                        <?php $selected = false; ?>
-                        <?php if ($this->user['groupements'] != null): ?>
-                            <?php foreach($this->user['groupements'] as $user_groupement): ?>
-                                <?php if ($groupement['ID_GROUPEMENT'] == $user_groupement['ID_GROUPEMENT']): ?>
-                                    <?php $selected = true; ?>
-                                    <?php break; ?>
-                                <?php endif ?>
-                            <?php endforeach ?>
-                        <?php endif ?>
-                        <?php if (!$previous_type): ?>
-                            <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
-                        <?php elseif ($previous_type != $groupement['ID_GROUPEMENTTYPE']): ?>
-                            </optgroup>
-                            <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
-                        <?php endif ?>
-                        <option value="<?php echo $groupement['ID_GROUPEMENT'] ?>" <?php echo $selected ? "selected" : '' ?>>
-                            <?php echo $groupement['LIBELLE_GROUPEMENT'] . " (" . $groupement['LIBELLE_GROUPEMENTTYPE'] . ") " ?>
-                        </option>
-                        <?php $previous_type = $groupement['ID_GROUPEMENTTYPE'] ?>
-	                <?php endforeach ?>
-
-                    <?php if ($previous_type): ?>
-                        </optgroup>
+            <select name='groupements[]' class="chosen input-xxlarge" data-placeholder="Groupements" multiple="multiple">
+                <?php $previous_type = null ?>
+                <?php foreach($this->groupements as $groupement) : ?>
+                    <?php $selected = false; ?>
+                    <?php if ($this->user['groupements'] != null): ?>
+                        <?php foreach($this->user['groupements'] as $user_groupement): ?>
+                            <?php if ($groupement['ID_GROUPEMENT'] == $user_groupement['ID_GROUPEMENT']): ?>
+                                <?php $selected = true; ?>
+                                <?php break; ?>
+                            <?php endif ?>
+                        <?php endforeach ?>
                     <?php endif ?>
-	            </select>
-            </p>
+                    <?php if (!$previous_type): ?>
+                        <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
+                    <?php elseif ($previous_type != $groupement['ID_GROUPEMENTTYPE']): ?>
+                        </optgroup>
+                        <optgroup label="<?php echo $groupement['LIBELLE_GROUPEMENTTYPE'] ?>">
+                    <?php endif ?>
+                    <option value="<?php echo $groupement['ID_GROUPEMENT'] ?>" <?php echo $selected ? "selected" : '' ?>>
+                        <?php echo $groupement['LIBELLE_GROUPEMENT'] . " (" . $groupement['LIBELLE_GROUPEMENTTYPE'] . ") " ?>
+                    </option>
+                    <?php $previous_type = $groupement['ID_GROUPEMENTTYPE'] ?>
+                <?php endforeach ?>
+
+                <?php if ($previous_type): ?>
+                    </optgroup>
+                <?php endif ?>
+            </select>
         </dd>
     </dl>
 </form>
