--- a/application/views/scripts/gestion-prescriptions/gestion-articles-edit.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-articles-edit.phtml
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 			<br/><br/>
-			<div class='row'>
+			<div class='row form-group'>
 				<div class='col-md-2'>
 					Libellé de l'article
 				</div>
