--- a/application/views/scripts/users/ressources-specialisees.phtml
+++ b/application/views/scripts/users/ressources-specialisees.phtml
@@ -62,7 +62,7 @@
 <!-- Boite d'ajout de ressource etablissement -->
 <form id="resource-ets-modal" class="modal fade" tabindex="-1" role="dialog" action="<?php echo $this->url(array('action' => 'add-ressource-specialisee')) ?>" method='post'>
     <div class="modal-dialog" role="document">
-        <div class="modal-content">    
+        <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
                     <span aria-hidden="true">&times;</span>
@@ -74,110 +74,118 @@
                 <dl class='dl-horizontal'>
                     <dt>Nom de la ressource</dt>
                     <dd>
-                        <p>
-                            <input class="form-control" type='text' name='text' placeholder='Laisser vide pour donner un nom par défaut' />
-                        </p>
+                        <input class="form-control" type='text' name='text' placeholder='Laisser vide pour donner un nom par défaut' />
                     </dd>
                 </dl>
 
                 <hr/>
 
-                <p>
-                    <strong>Critères sur le genre</strong>
-                    <select class="form-control" name='genre'>
-                        <?php foreach( $this->genres as $genre ) : ?>
-                            <option value='<?php echo $genre["ID_GENRE"] ?>'>
-                                <?php echo $genre["LIBELLE_GENRE"] ?>
-                            </option>
-                        <?php endforeach ?>
-                    </select>
-                </p>
-
                 <dl class='dl-horizontal'>
-                    <dt class='champs champ_types'>Types d'activité</dt>
-                    <dd class='champs champ_types'>
-                        <div style='height: 200px; overflow-y:none;'>
-                            <dl style='height: 150px; overflow-y: auto;'>
-                                <?php foreach( $this->types as $libelle_type => $_type ) : ?>
-                                    <dt style='width: 50px;'><?php echo $libelle_type ?><dt>
-                                    <dd style='margin-left: 70px;'>
-                                        <ul class='list-unstyled'>
-                                        <?php foreach( $_type as $type ) : ?>
-                                            <li>
-                                                <input name='types[]' type='checkbox' value='<?php echo $type["ID_TYPEACTIVITE"] ?>' />
-                                                <?php echo $type["LIBELLE_ACTIVITE"] ?>
-                                            </li>
-                                        <?php endforeach ?>
-                                        </ul>
-                                    </dd>
+                    <div class="form-group">
+                        <dt>Critères sur le genre</dt>
+                        <dd>
+                            <select class="form-control" name='genre'>
+                                <?php foreach( $this->genres as $genre ) : ?>
+                                    <option value='<?php echo $genre["ID_GENRE"] ?>'>
+                                        <?php echo $genre["LIBELLE_GENRE"] ?>
+                                    </option>
                                 <?php endforeach ?>
-                            </dl>
-                        </div>
-                    </dd>
+                            </select>
+                        </dd>
+                    </div>
 
-                    <dt class='champs champ_categorie'>Catégories</dt>
-                    <dd class='champs champ_categorie'>
-                        <p>
+                    <div class="form-group">
+                        <dt class='champs champ_types'>Types d'activité</dt>
+                        <dd class='champs champ_types'>
+                            <div style='height: 200px; overflow-y:none;'>
+                                <dl style='height: 150px; overflow-y: auto;'>
+                                    <?php foreach( $this->types as $libelle_type => $_type ) : ?>
+                                        <dt style='width: 50px;'><?php echo $libelle_type ?><dt>
+                                        <dd style='margin-left: 70px;'>
+                                            <ul class='list-unstyled'>
+                                            <?php foreach( $_type as $type ) : ?>
+                                                <li>
+                                                    <input name='types[]' type='checkbox' value='<?php echo $type["ID_TYPEACTIVITE"] ?>' />
+                                                    <?php echo $type["LIBELLE_ACTIVITE"] ?>
+                                                </li>
+                                            <?php endforeach ?>
+                                            </ul>
+                                        </dd>
+                                    <?php endforeach ?>
+                                </dl>
+                            </div>
+                        </dd>
+                    </div>
+
+                    <div class="form-group">
+                        <dt class='champs champ_categorie'>Catégories</dt>
+                        <dd class='champs champ_categorie'>
                             <select name='categories[]' multiple>
                                 <?php foreach($this->categories as $categorie) : ?>
                                     <option value='<?php echo $categorie['ID_CATEGORIE'] ?>'><?php echo $categorie['LIBELLE_CATEGORIE'] ?></option>
                                 <?php endforeach ?>
                             </select>
-                        </p>
-                    </dd>
+                        </dd>
+                    </div>
 
-                    <dt class="champ_famille champs">Famille</dt>
-                    <dd class="champ_famille champs">
-                        <select name='familles[]' multiple>
-                            <?php foreach( $this->familles as $item ) : ?>
-                                <option value='<?php echo $item["ID_FAMILLE"] ?>' >
-                                    <?php echo $item["LIBELLE_FAMILLE"] ?>
-                                </option>
-                            <?php endforeach ?>
-                        </select>
-                    </dd>
+                    <div class="form-group">
+                        <dt class="champ_famille champs">Famille</dt>
+                        <dd class="champ_famille champs">
+                            <select name='familles[]' multiple>
+                                <?php foreach( $this->familles as $item ) : ?>
+                                    <option value='<?php echo $item["ID_FAMILLE"] ?>' >
+                                        <?php echo $item["LIBELLE_FAMILLE"] ?>
+                                    </option>
+                                <?php endforeach ?>
+                            </select>
+                        </dd>
+                    </div>
 
-                    <dt class="champ_classe champs">Classe</dt>
-                    <dd class="champ_classe champs">
-                        <select name='classes[]' multiple>
-                            <?php foreach( $this->classes as $item ) : ?>
-                                <option value='<?php echo $item["ID_CLASSE"] ?>' >
-                                    <?php echo $item["LIBELLE_CLASSE"] ?>
-                                </option>
-                            <?php endforeach ?>
-                        </select>
-                    </dd>
+                    <div class="form-group">
+                        <dt class="champ_classe champs">Classe</dt>
+                        <dd class="champ_classe champs">
+                            <select name='classes[]' multiple>
+                                <?php foreach( $this->classes as $item ) : ?>
+                                    <option value='<?php echo $item["ID_CLASSE"] ?>' >
+                                        <?php echo $item["LIBELLE_CLASSE"] ?>
+                                    </option>
+                                <?php endforeach ?>
+                            </select>
+                        </dd>
+                    </div>
 
-                    <dt class="champ_classement champs">Classement</dt>
-                    <dd class="champ_classement champs">
-                        <select name='classements[]' multiple>
-                            <?php foreach( $this->classements as $item ) : ?>
-                                <option value='<?php echo $item["ID_CLASSEMENT"] ?>' >
-                                    <?php echo $item["LIBELLE_CLASSEMENT"] ?>
-                                </option>
-                            <?php endforeach ?>
-                        </select>
-                    </dd>
+                    <div class="form-group">
+                        <dt class="champ_classement champs">Classement</dt>
+                        <dd class="champ_classement champs">
+                            <select name='classements[]' multiple>
+                                <?php foreach( $this->classements as $item ) : ?>
+                                    <option value='<?php echo $item["ID_CLASSEMENT"] ?>' >
+                                        <?php echo $item["LIBELLE_CLASSEMENT"] ?>
+                                    </option>
+                                <?php endforeach ?>
+                            </select>
+                        </dd>
+                    </div>
 
-                    <dt class='champs champ_commission'>Commissions</dt>
-                    <dd class='champs champ_commission'>
-                        <p>
+                    <div class="form-group">
+                        <dt class='champs champ_commission'>Commissions</dt>
+                        <dd class='champs champ_commission'>
                             <select class="form-control" name='commissions'>
                                 <option value='0'>Ignorer les commissions compétentes de l'utilisateur</option>
                                 <option value='1'>Des commissions compétentes de l'utilisateur</option>
                             </select>
-                        </p>
-                    </dd>
+                        </dd>
+                    </div>
 
-                    <dt class='champs champ_adresse'>Groupements</dt>
-                    <dd class='champs champ_adresse'>
-                        <p>
+                    <div class="form-group">
+                        <dt class='champs champ_adresse'>Groupements</dt>
+                        <dd class='champs champ_adresse'>
                             <select class="form-control" name='groupements'>
                                 <option value='0'>Ignorer les groupements de l'utilisateur</option>
                                 <option value='1'>Sur les groupements de l'utilisateur</option>
                             </select>
-                        </p>
-                    </dd>
+                        </dd>
+                    </div>
 
                     <dt class='champs champ_adresse'>Commune</dt>
                     <dd class='champs champ_adresse'>
@@ -209,22 +217,20 @@
 
             <div class="modal-body">
                 <dl class='dl-horizontal'>
-                    <dt>Nom de la ressource</dt>
-                    <dd>
-                        <p>
+                    <div class="form-group">
+                        <dt>Nom de la ressource</dt>
+                        <dd>
                             <input class="form-control" type='text' name='text' placeholder='Laisser vide pour donner un nom par défaut' />
-                        </p>
-                    </dd>
+                        </dd>
+                    </div>
 
                     <dt>Nature</dt>
                     <dd>
-                        <p>
-                            <select name='dossier_natures[]' multiple>
-                                <?php foreach($this->natures_dossier as $nature) : ?>
-                                    <option data-type='<?php echo $nature['ID_DOSSIERTYPE'] ?>' value='<?php echo $nature['ID_DOSSIERNATURE'] ?>'><?php echo $nature['LIBELLE_DOSSIERNATURE'] ?></option>
-                                <?php endforeach ?>
-                            </select>
-                        </p>
+                        <select name='dossier_natures[]' multiple>
+                            <?php foreach($this->natures_dossier as $nature) : ?>
+                                <option data-type='<?php echo $nature['ID_DOSSIERTYPE'] ?>' value='<?php echo $nature['ID_DOSSIERNATURE'] ?>'><?php echo $nature['LIBELLE_DOSSIERNATURE'] ?></option>
+                            <?php endforeach ?>
+                        </select>
                     </dd>
                 </dl>
             </div>
